[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "ptool"
dependencies = [
    "pillow"
]
version = "2025.04"

[project.optional-dependencies]
all = [
    "pillow-heif",
    "ruff",
    "mypy"
]

[project.scripts]
ptool = "ptool:main"

[tool.basedpyright]
reportUnusedCallResult = false
reportAny = false

[tool.mypy]
disable_error_code = ["import-untyped"]
